Fix user search test to work with Java 8